--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^7.3.6",
     "axios": "^1.13.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
